--- a/Client/vite-project/package.json
+++ b/Client/vite-project/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.1",
     "axios": "^1.7.9",
     "gsap": "^3.12.5",
+    "params": "^0.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
